caixa de login 27/06
modificações na caixa de login fazendo ela ficar mais atraente, foi adiconado a logo, link de cadastro, botão de entrar inicial, border radius  na caixa geral de login com um leve sombreamento, alem das subclasses para alterar a cor dos inputs.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 <body>
     <div id="bloco_geral">
         <div id="bloco_geral_login">
+                <img class="logo_wec" src="imagens/wec_logo.png" alt="Logo do WEC">
             <div class="caixas_de_registro">
                 <input type="email" name="registro" placeholder="Login" required >
                 <input type="password" name="senha" placeholder="Senha" required>
             </div>
+            <a class="link_cadastrar" href="#">É novo por aqui? cadastre-se</a>
+            <button class="botao_entrar">Entrar</button>
         </div>
     </div>
 </body>
