--- a/index.html
+++ b/index.html
@@ -8,13 +8,23 @@
 </head>
 <body>
     <div id="bloco_geral">
+        <div id="bloco_apresentacao">
+            <h1>Viva a Emoção do Endurance</h1>
+            <p>Velocidade, estratégia e resistência. Conecte-se às notícias que movem o mundo da WEC.</p>
+        </div>
         <div id="bloco_geral_login">
                 <img class="logo_wec" src="imagens/wec_logo.png" alt="Logo do WEC">
             <div class="caixas_de_registro">
-                <input type="email" name="registro" placeholder="Login" required >
+                <h1 class="texto_email">E-mail</h1>
+                <input type="email" name="registro" placeholder="nome@gmail.com" required >
+
+                <h1 class="texto_senha">Senha</h1>
                 <input type="password" name="senha" placeholder="Senha" required>
             </div>
-            <a class="link_cadastrar" href="#">É novo por aqui? cadastre-se</a>
+            <div class="bloco_links">
+                <a href="#">É novo por aqui? cadastre-se</a>
+                <a href="#">Esqueci minha senha</a>
+            </div>
             <button class="botao_entrar">Entrar</button>
         </div>
     </div>
