--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="bloco_geral">
         <div id="bloco_apresentacao">
             <h1>Viva a Emoção do Endurance</h1>
-            <p>Velocidade, estratégia e resistência. Conecte-se às notícias que movem o mundo da WEC.</p>
+            <p>Velocidade, estratégia e resistência. conecte-se às notícias que movem o mundo da WEC.</p>
         </div>
         <div id="bloco_geral_login">
                 <img class="logo_wec" src="imagens/wec_logo.png" alt="Logo do WEC">
